--- a/deno.json
+++ b/deno.json
@@ -3,6 +3,6 @@
     "cheerio": "npm:cheerio@^1.0.0"
   },
   "tasks": {
-    "dev": "deno run --allow-env --allow-net --allow-write main.ts"
+    "dev": "deno run --allow-env --allow-net --allow-write src/main.ts"
   }
 }
